<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton15"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/arrow"
        android:onClick="goBack" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal|left"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/chose"
            android:textSize="24sp" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="45dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/aries1"
                android:contentDescription="@android:string/fingerprint_icon_content_description"
                android:onClick="selectSign"
                tools:targetApi="m" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="45dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:adjustViewBounds="false"
                android:background="@drawable/taurus"
                android:contentDescription="@android:string/fingerprint_icon_content_description"
                android:cropToPadding="true"
                android:onClick="selectSign"
                tools:targetApi="m" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="45dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/gemini"
                android:contentDescription="@android:string/fingerprint_icon_content_description"
                android:onClick="selectSign"
                tools:targetApi="m" />
        </TableRow>

        <TableRow
            android:id="@+id/row6"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:text="@string/aries"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:text="@string/taurus"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:text="@string/gemini"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="45dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/cancer"
                android:contentDescription="@android:string/fingerprint_icon_content_description"
                android:onClick="selectSign"
                tools:targetApi="m" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="45dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/leo"
                android:contentDescription="@android:string/fingerprint_icon_content_description"
                android:onClick="selectSign"
                tools:targetApi="m" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="45dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/virgo"
                android:contentDescription="@android:string/fingerprint_icon_content_description"
                android:onClick="selectSign"
                tools:targetApi="m" />
        </TableRow>

        <TableRow
            android:id="@+id/row7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:text="@string/cancer"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:text="@string/leo"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:text="@string/virgo"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="45dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/libra"
                android:contentDescription="@android:string/fingerprint_icon_content_description"
                android:onClick="selectSign"
                tools:targetApi="m" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="45dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/scorpio"
                android:contentDescription="@android:string/fingerprint_icon_content_description"
                android:onClick="selectSign"
                tools:targetApi="m" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="45dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/sagittarius"
                android:contentDescription="@android:string/fingerprint_icon_content_description"
                android:onClick="selectSign"
                tools:targetApi="m" />
        </TableRow>

        <TableRow
            android:id="@+id/row8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:text="@string/libra"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/scorpio"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sagitarius"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/imageButton12"
                android:layout_width="45dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/capricorn"
                android:contentDescription="@android:string/fingerprint_icon_content_description"
                android:onClick="selectSign"
                tools:targetApi="m" />

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="45dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/aquarius"
                android:contentDescription="@android:string/fingerprint_icon_content_description"
                android:onClick="selectSign"
                tools:targetApi="m" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="45dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/pisces"
                android:contentDescription="@android:string/fingerprint_icon_content_description"
                android:onClick="selectSign"
                tools:targetApi="m" />
        </TableRow>

        <TableRow
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/capricorn"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/aquarius"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_span="1"
                android:gravity="center_horizontal"
                android:text="@string/pisces"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            style="@android:style/Widget.Holo.Light.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/getStarted"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>